--- a/.gitignore
+++ b/.gitignore
@@ -206,3 +206,10 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 NEO4J_README.md
+
+# Data files - exclude large datasets
+data/*.json
+data/**/*.json
+
+# Prefect runtime files
+.prefect/
