--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "neo4j>=5.28.2",
     "neo4j-graphrag>=1.10.0",
     "openai>=1.0.0",
+    "prefect>=3.2.0",
     "pydantic>=2.12.0",
     "pydantic-settings>=2.11.0",
     "qdrant-client>=1.15.1",
@@ -44,6 +45,10 @@ lint = [
 test = [
     "pytest>=8.4.2",
     "pytest-asyncio>=1.2.0",
+]
+orchestration = [
+    "prefect>=3.2.0",
+    "prefect-docker>=0.6.0",
 ]
 
 [build-system]
